--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Order processing API with WhatsApp notifications",
   "main": "server.js",
   "scripts": {
-    "start": "NODE_ENV=development node server.js",
+    "start": "node server.js",
     "dev": "nodemon server.js",
     "start:live": "NODE_ENV=production node server.js",
     "start:dev": "NODE_ENV=development node server.js"
