--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start:dev": "NODE_ENV=development node server.js"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "cors": "^2.8.5",
     "dayjs": "^1.11.13",
     "dotenv": "^16.3.1",
