--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^8.0.3",
     "multer": "^2.0.2",
     "node-cron": "^4.2.0",
+    "sharp": "^0.34.5",
     "twilio": "^4.19.0",
     "uuid": "^11.1.0"
   },
